[tool.poetry]
version = "1.2.1"
name = "league-data"
description = "Tenha acesso facilmente aos dados dos campeões e skins do League of Legends."
readme = "README.md"
authors = ["Yan Gabriel <yangabrielogy@gmail.com>"]
packages = [{include = "league_data"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pylint = "^2.17.0"
pydocstyle = "^6.3.0"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.1.3"
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.8.3"

[tool.isort]
profile = "black"

[tool.pylint]
max-line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
